Fix issues with the countdown executed on the wrong pages Fix layout issues with the markup Add functionnalities for the modified blocs

--- a/sites/all/themes/nrb_televie/css/src/_page-aujourlejour.scss
+++ b/sites/all/themes/nrb_televie/css/src/_page-aujourlejour.scss
@@ -32,16 +32,16 @@
   transform: skewX(0deg) skewY(1.5deg);
 }
 
-#aujourlejour .aujourlejour-header h2 {
+#aujourlejour .aujourlejour-header h1
+{
   font-size: 42px;
   padding-top: 80px;
-  font-family: proxima-excn-semibold;
-}
-
-#aujourlejour .aujourlejour-header h3 {
-  font-size: 2.8em;
-  margin: 0 0 30px 0;
   font-family: proxima-excn-thin;
+  margin: 0 0 30px 0;
+
+  strong {
+    font-family: proxima-excn-semibold;
+  }
 }
 
 #aujourlejour .aujourlejour-header .aujourlejour-highlight .views-row {
